--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
   app:
     image: node:22.4.0-alpine3.19
+    command: sh -c "node api/index.js"
     working_dir: /app
     volumes:
       - ./:/app
+    ports:
+      - 127.0.0.1:4800:3000
