--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   app:
-    image: node:22.4.0-alpine3.19
+    build: .
     command: sh -c "node api/index.js"
     working_dir: /app
     volumes:
