--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "express": "^4.19.2",
-    "pureimage": "^0.4.13"
+    "canvas": "^2.11.2",
+    "express": "^4.19.2"
   }
 }
