--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
+  "scripts": {
+    "format": "prettier --write ."
+  },
   "dependencies": {
     "canvas": "^2.11.2",
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.2"
   }
 }
