improve local development

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   app:
     build: .
-    command: sh -c "node api/index.js"
+    command: sh -c "npm install && npx nodemon api/index.js"
     working_dir: /app
     volumes:
       - ./:/app
