--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,7 @@ services:
     working_dir: /app
     volumes:
       - ./:/app
+    env_file:
+      - .env
     ports:
       - 127.0.0.1:4800:3000
