--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "airtable": "^0.12.2",
     "canvas": "^2.11.2",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "qs": "^6.12.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
